@@ -5,6 +5,7 @@ Current Release
 - Removed list functionality from dnsrmusergroup
 - Made allow/deny flags required for dnsmkacl.
 - Made dnsmkzone require a zone name.
+- Made dnsrmhost require the target, fixed unittest.
 
 2010-01-27 release-0.11
 - Fixed dnsmkacl warning with no arguments
